{
    "name": "SwitchCards",
    "maps": [
        {
            "name": "Selecting",
            "id": "b283a544-8bee-461c-93c3-d95919baebec",
            "actions": [
                {
                    "name": "LeftSelect",
                    "type": "PassThrough",
                    "id": "9c9e0083-040d-41bd-83d6-b74a3f3c6481",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightSelect",
                    "type": "PassThrough",
                    "id": "393ad68a-fe5a-4743-bb91-913380a471bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "6ccd216e-213d-4f30-aac3-4de5be72ad42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f47c8624-d7b6-4057-972f-b93552bfdaac",
                    "path": "<Keyboard>/a",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeftSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d84aea4-7b67-47fd-9f6a-f599dd2fe5e7",
                    "path": "<Keyboard>/d",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RightSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e509883b-01b2-4a18-b30b-d7e57823b634",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}